changed from pair to list